[gd_scene load_steps=2 format=3 uid="uid://d34gq241ftrpa"]

[ext_resource type="Script" path="res://scenes/debug/DebugPanel.gd" id="1_ruq43"]

[node name="DebugPanel" type="Control"]
custom_minimum_size = Vector2(350, 400)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ruq43")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Debug Panel (F12 to toggle)"

[node name="Separator1" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SpawnerTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Enemy Spawner"

[node name="EnemyTypeDropdown" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SpawnButtons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SpawnAtCursor" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/SpawnButtons"]
layout_mode = 2
text = "Spawn at Cursor (V)"

[node name="SpawnAtPlayer" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/SpawnButtons"]
layout_mode = 2
text = "Spawn at Player (B)"

[node name="CountButtons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CountLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CountButtons"]
layout_mode = 2
text = "Count:"

[node name="Count1" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CountButtons"]
layout_mode = 2
text = "1"

[node name="Count5" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CountButtons"]
layout_mode = 2
text = "5"

[node name="Count10" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CountButtons"]
layout_mode = 2
text = "10"

[node name="ClearAllButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CountButtons"]
layout_mode = 2
text = "Clear All Enemies"

[node name="Separator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InspectorTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Entity Inspector"

[node name="EntityInfo" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
bbcode_enabled = true
text = "[center][color=#FFD700]Ctrl+Click[/color] on an entity to inspect[/center]"

[node name="EntityActions" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="KillButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/EntityActions"]
layout_mode = 2
text = "Kill"

[node name="HealButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/EntityActions"]
layout_mode = 2
text = "Heal"

[node name="DamageButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/EntityActions"]
layout_mode = 2
text = "Damage"

[node name="Separator3" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SystemTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "System Controls"

[node name="PauseAICheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pause AI"


[node name="SystemButtons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResetSessionButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/SystemButtons"]
layout_mode = 2
text = "Reset Session"

[node name="Separator4" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PerformanceInfo" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[color=white]Loading performance stats...[/color]"
fit_content = true
